syntax = "proto3";

package jwt_payload_proto;

option go_package = "generated/proto/jwt_payload_proto";

message JwtPayloadDataOtpActivationEmail {
  int64 user_id = 1;
  string email = 2;
  bool is_verified = 3;
}

message JwtPayload {
  oneof data {
    JwtPayloadDataOtpActivationEmail otp_activation_email = 1;
  }
}